<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBgColor"
    android:orientation="vertical"
    tools:context="com.basics.android.udacity.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/score_panel_1"
            style="@style/ScoreCard">

            <TextView
                style="@style/TeamName"
                android:text="@string/team_1_name" />

            <TextView
                android:id="@+id/score_team_a"
                style="@style/TeamScore"
                android:text="0" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/reset_background"
                android:text="@string/reset_button"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/score_panel_2"
            style="@style/ScoreCard">

            <TextView
                style="@style/TeamName"
                android:text="@string/team_2_name" />

            <TextView
                android:id="@+id/score_team_b"
                style="@style/TeamScore"
                android:text="0" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_first_service_1"
                style="@style/ScoreButton"
                android:enabled="true"
                android:text="@string/first_service" />

            <Button
                android:id="@+id/btn_ace_point_1"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/ace_point" />

            <Button
                android:id="@+id/btn_first_service_2"
                style="@style/ScoreButton"
                android:enabled="true"
                android:text="@string/first_service" />

            <Button
                android:id="@+id/btn_ace_point_2"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/ace_point" />

        </TableRow>

        <TableRow
            android:layout_weight="0"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_attack_point_1"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/attack_point" />

            <Button
                android:id="@+id/btn_block_point_1"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/block_point" />

            <Button
                android:id="@+id/btn_attack_point_2"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/attack_point" />

            <Button
                android:id="@+id/btn_block_point_2"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/block_point" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_opponent_fault_1"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/opponent_fault" />

            <Button
                android:id="@+id/btn_opponent_error_1"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/opponent_error" />

            <Button
                android:id="@+id/btn_opponent_fault_2"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/opponent_fault" />

            <Button
                android:id="@+id/btn_opponent_error_2"
                style="@style/ScoreButton"
                android:enabled="false"
                android:text="@string/opponent_error" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">


        <TableLayout
            style="@style/StatsCard"
            android:padding="@dimen/activity_horizontal_margin">

            <TableRow>

                <TextView
                    style="@style/FirstCellHeader" />

                <View style="@style/ColumnSeparator" />

                <TextView
                    style="@style/CellHeader"
                    android:text="@string/services_header" />

                <TextView
                    style="@style/CellHeader"
                    android:text="@string/aces_header" />

                <TextView
                    style="@style/CellHeader"
                    android:text="@string/attacks_header" />

                <TextView
                    style="@style/CellHeader"
                    android:text="@string/blocks_header" />

                <TextView
                    style="@style/CellHeader"
                    android:text="@string/faults_header" />

                <TextView
                    style="@style/CellHeader"
                    android:text="@string/errors_header" />

                <TextView
                    style="@style/CellHeader"
                    android:text="@string/efficiency_header" />

            </TableRow>

            <TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/FirstCellHeader"
                    android:text="@string/team_1_name" />

                <View style="@style/ColumnSeparator" />

                <TextView
                    android:id="@+id/service_stat_1"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/ace_stat_1"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/attack_stat_1"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/block_stat_1"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/fault_stat_1"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/error_stat_1"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/efficieny_stat_1"
                    style="@style/CellHeader"
                    tools:text="0.0" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/FirstCellHeader"
                    android:text="@string/team_2_name" />

                <View style="@style/ColumnSeparator" />

                <TextView
                    android:id="@+id/service_stat_2"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/ace_stat_2"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/attack_stat_2"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/block_stat_2"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/fault_stat_2"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/error_stat_2"
                    style="@style/CellData"
                    tools:text="0" />

                <TextView
                    android:id="@+id/efficieny_stat_2"
                    style="@style/CellHeader"
                    tools:text="0.0" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
